[tool.poetry]
name = "my-best-repo"
version = "0.1.0"
description = ""
authors = ["afik.cohen <aphexsa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.dependencies.codeflash]
url = "https://www.dropbox.com/scl/fi/o6xuo4vxrizli0nz80jra/codeflash-0.5.0.post95.dev0-a60d62c-py3-none-any.whl?rlkey=7r8gbrp2q5cs5mj8u8cuecju2&dl=1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.codeflash]
root = "."
test-root = "tests"
test-framework = "pytest"
ignore-paths = []
